test/errors/type/table/copy.yasl
mt.lookup({}, .copy)(1)
